Signed-off-by: getian124 <3044327581@qq.com> 首页修改内容8.7（热门单机）

--- a/Public/Home/index.html
+++ b/Public/Home/index.html
@@ -84,9 +84,6 @@
                 </div>
             </div>
         </div>
-        <div id="header_box_five">
-              个人中心
-        </div>
     </div>
 </header>
 <nav id="nav">
@@ -659,26 +656,31 @@
                  <div class="alone_one_back">
                      <a href="">
                          <h3>访问《追杀魔兽》</h3>
+                         <div><h3></h3></div>
                      </a>
                  </div>
                 <div class="alone_one_back">
                     <a href="">
                         <h3>访问《追杀魔兽》</h3>
+                        <div><h3></h3></div>
                     </a>
                 </div>
                 <div class="alone_one_back">
                     <a href="">
                         <h3>访问《追杀魔兽》</h3>
+                        <div><h3></h3></div>
                     </a>
                 </div>
                 <div class="alone_one_back">
                     <a href="">
                         <h3>访问《追杀魔兽》</h3>
+                        <div><h3></h3></div>
                     </a>
                 </div>
                 <div class="alone_one_back">
                     <a href="">
                         <h3>访问《追杀魔兽》</h3>
+                        <div><h3></h3></div>
                     </a>
                 </div>
             </div>
@@ -1044,7 +1046,7 @@
         </label>
         <a href="" class="gooey-menu-item return_top"> <img src="image/fetop.png" style="vertical-align: middle;width: 32px;"  alt=""/> </a>
         <a href="#" class="gooey-menu-item"> <img src="image/service.png" style="vertical-align: middle;width: 32px;"  alt=""/></a>
-        <a href="person/user.html" class="gooey-menu-item"> <img src="image/geperson.png" style="vertical-align: middle;width: 32px;"  alt=""/></a>
+        <a href="person/user.html" onclick="return false" class="gooey-menu-item enter_person"> <img src="image/geperson.png" style="vertical-align: middle;width: 32px;"  alt=""/></a>
     </div>
 </footer>
 </body>
