Signed-off-by: getian124 <3044327581@qq.com> 首页图片信息

--- a/Public/Home/cartoon/index.html
+++ b/Public/Home/cartoon/index.html
@@ -8,7 +8,8 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
     <meta name="format-detection" content="telephone=no, email=no" />
-    <title>飞扬天下漫画</title>
+    <title> CO7 漫画</title>
+    <link rel="shortcut icon" href="images/20170814113613362_easyicon_net_32.ico"/>
     <link rel="stylesheet" href="common/css/reset.css"/>
     <link rel="stylesheet" href="common/css/footer.css"/>
     <link rel="stylesheet" href="css/index.css"/>
@@ -28,10 +29,11 @@
             <button id="header_search"></button>
         </div>
         <div>
-            <!--<span id="entry_lg">登录</span>-->
-            <!--<span>|</span>-->
-            <!--<span><a href="login/register.html">注册</a></span>-->
-            <a href="">
+            <span id="entry_lg">登录</span>
+            <span>|</span>
+            <span><a href="login/register.html">注册</a></span>
+            <!--登录后的头像内容-->
+            <a href="" style="display: none">
                 <img src="images/touxiang.png" id="person_show" alt=""/>
             </a>
             <div id="person_center_pst">
@@ -181,8 +183,8 @@
 <nav id="nav">
    <div id="nav_all">
        <ul id="nav_hover_rel">
-           <li class="nav_hover"><a href="">首页</a></li>
-           <li class="nav_hover"><a href="">更新</a></li>
+           <li class="nav_hover"><a href="index.html">首页</a></li>
+           <li class="nav_hover"><a href="page/update.html">更新</a></li>
            <li class="nav_hover"><a href="">排行榜</a></li>
            <li class="nav_hover"><a href="">日漫</a></li>
            <li class="nav_hover"><a href="">分类</a></li>
