Signed-off-by: getian124 <3044327581@qq.com> 登录内容修盖

--- a/Public/Home/cartoon/index.html
+++ b/Public/Home/cartoon/index.html
@@ -33,7 +33,7 @@
             <span>|</span>
             <span><a href="login/register.html">注册</a></span>
             <!--登录后的头像内容-->
-            <a href="" style="display: none">
+            <a href="" style="display:none">
                 <img src="images/touxiang.png" id="person_show" alt=""/>
             </a>
             <div id="person_center_pst">
@@ -49,7 +49,7 @@
         <div>
             <ul>
                 <li class="header_msg_rel">
-                    <a href="">消息</a>
+                    <a href="" id="person_msg">消息</a>
                     <ul class="header_msg_pst">
                         <li>
                             <a href="">
@@ -1714,6 +1714,10 @@
                 </div>
                 <div class="login_two">
                     密码 &nbsp; <input type="password" id="name_pass" placeholder="密码" autocomplete="off"/>
+                </div>
+                <div class="er_code">
+                    <div></div>
+                    <img src="" alt=""/>
                 </div>
                 <div class="login_three">
                     <input type="checkbox" value="1" id="w_name" />下次自动登录
