--- a/Public/Home/cartoon/login/login.html
+++ b/Public/Home/cartoon/login/login.html
@@ -43,6 +43,10 @@
                         <input type="password" id="password" placeholder="请输入密码"/>
                         <span id="notice_two"></span>
                     </div>
+                    <div class="log_line">
+                       <div id="er_code"></div>
+                       <img src="" alt=""/>
+                    </div>
                     <div>
                         <input type="checkbox" id="w_name"/>
                         <span>自动登录</span>
