Signed-off-by: getian124 <3044327581@qq.com> 8月30页面提交

--- a/Public/Home/cartoon/index.html
+++ b/Public/Home/cartoon/index.html
@@ -185,13 +185,18 @@
        <ul id="nav_hover_rel">
            <li class="nav_hover"><a href="index.html">首页</a></li>
            <li class="nav_hover"><a href="page/update.html">更新</a></li>
-           <li class="nav_hover"><a href="">排行榜</a></li>
+           <li class="nav_hover"><a href="page/opus.html">排行榜</a></li>
            <li class="nav_hover"><a href="">日漫</a></li>
            <li class="nav_hover"><a href="">分类</a></li>
            <li class="nav_hover"><a href="">VIP专区</a></li>
            <li class="nav_hover"><a href="">积分商城</a></li>
            <li class="nav_hover"><a href="">活动</a></li>
        </ul>
+       <div id="nav_all_r">
+           <a href="book/book.html">作者投稿</a>
+           <span>|</span>
+           <a href="">福利政策</a>
+       </div>
    </div>
 </nav>
 <section id="section">
