--- a/Public/Home/cartoon/book/book_common.html
+++ b/Public/Home/cartoon/book/book_common.html
@@ -7,7 +7,7 @@
         </a>
     </li>
     <li class="section_left_list">
-        <a href="">
+        <a href="list.html">
             <i class="iconfont">&#xe61a;</i>
             <span>全部漫话</span>
             <span></span>
@@ -63,3 +63,9 @@
         </a>
     </li>
 </ul>
+
+<div id="section_left_d">
+    <a href="">新手指南</a>
+    <a href="">作者福利</a>
+    <span>CO7漫画投诉或建议邮箱:co7qq.com</span>
+</div>
