--- a/Public/Home/cartoon/book/list.html
+++ b/Public/Home/cartoon/book/list.html
@@ -44,7 +44,111 @@
         <div id="section_right">
             <div id="section_right_top">
                 <h3>漫画列表</h3>
+                <span>共有<span>3</span>部漫画</span>
+                <a href="create.html">发布</a>
             </div>
+            <form class="search" action="" >
+                <div class="key">
+                    关键词 <input type="text" name="key" placeholder="漫画名称、作者" value="">
+                </div>
+                <div id="select-date">
+                    <span></span>
+                    <input type="text" class="time" data-action="time_half" data-date-range="from" name="dateFromStr" value=""> 至
+                    <input type="text" class="time" data-action="time_half" data-date-range="to" name="dateToStr" value="">
+                    <input type="submit" class="submit" value="搜  索">
+                </div>
+            </form>
+
+            <div class="result">
+                <table>
+                    <thead>
+                    <tr><th>漫画名称</th>
+                        <th style="width:90px">漫画状态</th>
+                        <th style="width:90px">审核状态</th>
+                        <th style="width:90px">吐槽</th>
+                        <th style="width:90px">催更</th>
+                        <th>操作</th>
+                    </tr></thead>
+                    <tbody>
+                    <tr>
+                        <td class="bookinfo">
+                            <a href="/book/view/5034946843940349669"><img src="https://easyread.nosdn.127.net/pic20170824d51fc4fbe1e24e8588f694a330ba2b75.jpg"></a>
+                            <div class="info">
+                                <p class="title"><a href="/book/view/5034946843940349669">神游国度</a></p>
+
+                                <p>2017-08-24 10:45:56</p>
+                                <p>更新到：暂无话发布上线</p>
+                                <p>点&nbsp;&nbsp;&nbsp;击：0</p>
+                                <p>收&nbsp;&nbsp;&nbsp;藏：0</p>
+                                <p class="edit"><a href="/book/update/5034946843940349669">修改漫画</a></p>
+                            </div>
+                        </td>
+                        <td>已退稿</td>
+                        <td>作品审核拒绝</td>
+                        <td class="num">0</td>
+                        <td class="num">0</td>
+                        <td class="oper">
+                            <a class="add" href="/article/create/5034946843940349669">新增话</a>
+                            <a href="/book/manage/5034946843940349669">管理话</a>
+
+                            <a href="javascript:void(0);" data-bookid="5034946843940349669" data-action="book_applypublish">提交审核</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="bookinfo">
+                            <a href="/book/view/5033227676220158100"><img src="https://easyread.nosdn.127.net/pic201708223fef709f5af14a8dafd0750cd1c758be.jpg"></a>
+                            <div class="info">
+                                <p class="title"><a href="/book/view/5033227676220158100">神游国度</a></p>
+
+                                <p>2017-09-01 11:03:33</p>
+                                <p>更新到：1 初见</p>
+                                <p>点&nbsp;&nbsp;&nbsp;击：523</p>
+                                <p>收&nbsp;&nbsp;&nbsp;藏：2</p>
+                                <p class="edit"><a href="/book/update/5033227676220158100">修改漫画</a></p>
+                            </div>
+                        </td>
+                        <td>已发布</td>
+                        <td>作品审核通过</td>
+                        <td class="num">1</td>
+                        <td class="num">7</td>
+                        <td class="oper">
+                            <a class="add" href="/article/create/5033227676220158100">新增话</a>
+                            <a href="/book/manage/5033227676220158100">管理话</a>
+                            <a href="javascript:void(0);" data-publish-type="0" data-bookid="5033227676220158100" data-action="check_epayaccount">申请上架</a>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="bookinfo">
+                            <a href="/book/view/5032798586050155139"><img src="https://easyread.nosdn.127.net/pic20170821da31de3e25a8484fb5e64021d23cff86.jpg"></a>
+                            <div class="info">
+                                <p class="title"><a href="/book/view/5032798586050155139">140</a></p>
+
+                                <p>2017-09-01 17:06:36</p>
+                                <p>更新到：暂无话发布上线</p>
+                                <p>点&nbsp;&nbsp;&nbsp;击：0</p>
+                                <p>收&nbsp;&nbsp;&nbsp;藏：0</p>
+                                <p class="edit"><a href="/book/update/5032798586050155139">修改漫画</a></p>
+                            </div>
+                        </td>
+                        <td>已退稿</td>
+                        <td>作品审核拒绝</td>
+                        <td class="num">0</td>
+                        <td class="num">0</td>
+                        <td class="oper">
+                            <a class="add" href="/article/create/5032798586050155139">新增话</a>
+                            <a href="/book/manage/5032798586050155139">管理话</a>
+
+                            <a href="javascript:void(0);" data-bookid="5032798586050155139" data-action="book_applypublish">提交审核</a>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td colspan="5"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+
         </div>
     </div>
 </section>
