--- a/Public/Home/cartoon/book/manage.html
+++ b/Public/Home/cartoon/book/manage.html
@@ -44,7 +44,7 @@
         <div id="section_right">
             <div id="section_right_top">
                 <h3>神游国度</h3>
-                <a href="">返回作品列表</a>
+                <a href="list.html">返回作品列表</a>
             </div>
             <div id="section_right_down">
                 <div id="section_down_one">
